issues with text align
Found missing sm6 on bootstrap line

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ h1 {
   font-size: 96px;
 }
 
-index.html h2 {
+h2 {
   font-size: 48px;
 }
 
@@ -30,13 +30,8 @@ h3 {
 }
 
 p {
-  padding: 20px;
-  border-radius: 4px;
   font-size: 18px;
   line-height: 1.5;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 1rem;
 }
 
 .navigation-links {
@@ -47,34 +42,6 @@ p {
 
 .navigation-links a {
   margin: 20px;
-  border-radius: 4px;
-  padding: 20px 15px;
-  text-decoration: none;
-  text-transform: capitalize;
-}
-
-.contact-link {
-  background: var(--primary-color);
-  box-shadow: var(--box-shadow);
-  color: white;
-}
-
-.about-link {
-  color: var(--primary-color);
-  border: 1px solid var(--primary-color);
-}
-.about-paragraphs {
-  margin: 30px 0;
-}
-
-.about-paragraphs p {
-  margin: 10px;
-}
-
-.homepage-link {
-  color: var(--primary-color);
-  text-align: center;
-  display: block;
 }
 
 .primary-link {
@@ -87,6 +54,10 @@ p {
   color: white;
 }
 
+.primary-link:hover {
+  color: white;
+}
+
 .secondary-link {
   border-radius: 4px;
   padding: 20px 15px;
@@ -96,8 +67,13 @@ p {
   border: 1px solid var(--primary-color);
 }
 
+.homepage-link {
+  color: var(--primary-color);
+  text-align: center;
+  display: block;
+}
+
 .about-paragraphs {
-  display: flex;
   margin: 30px 0;
 }
 
